--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="macronutrientgraphdiv" ng-show="currentSelectedFoodObject">
     <nvd3-pie-chart
        id="macronutrientgraph"
-       data="exampleData"
+       data="macroGraphData"
        width="550"
        height="350"
        x="xFunction()"
